# WinApi.SimpleConsoleChat

./: .clang-format  .gitignore  CmakeLists.txt  README.md
Wascc/: Wascc.sln
src/: .clang-format  CmakeLists.txt
src/Wascc.Client.Presentation/: CMakeLists.txt  Wascc.Client.Presentation.vcxproj  Wascc.Client.Presentation.vcxproj.filters
src/Wascc.Client.Presentation/src/Wascc.Client.Presentation/: main.cpp
src/Wascc.Console.Io/: CMakeLists.txt
src/Wascc.Console.Io/include/Wascc.Console.Io/: Console.h  Preprocessor.h
src/Wascc.Console.Io/src/Wascc.Console.Io/: Console.cpp
src/Wascc.Io/: CMakeLists.txt
src/Wascc.Io/include/Wascc.Io/: Console.h  Preprocessor.h
src/Wascc.Io/src/Wascc.Io/: Console.cpp
src/Wascc.Networking.Io/: CMakeLists.txt
src/Wascc.Networking.Io/include/Wascc.Networking.Io/: ClientConnectionFactory.h  IConnection.h  IConnectionFactory.h  IConnectionListener.h  Preprocessor.h  ServerConnectionFactory.h  TcpConnection.h  TcpConnectionListener.h
src/Wascc.Networking.Io/src/Wascc.Networking.Io/: ClientConnectionFactory.cpp  ConnectionFactoryHelper.cpp  ConnectionFactoryHelper.h  ServerConnectionFactory.cpp  TcpConnection.cpp  TcpConnectionListener.cpp
src/Wascc.Server.Presentation/: CMakeLists.txt  Wascc.Server.Presentation.vcxproj  Wascc.Server.Presentation.vcxproj.filters  main.cpp
src/Wascc.Server.Presentation/include/Hypodermic/: Hypodermic.vcxproj.filters
src/Wascc.Server.Presentation/include/Wascc.Server.Presentation/: Communication.h  CommunicationRepository.h  Preprocessor.h
src/Wascc.Server.Presentation/src/Wascc.Server.Presentation/: Communication.cpp  CommunicationRepository.cpp  main.cpp
