cmake_minimum_required(VERSION 3.12)

project(${WASCC_CLIENT_PRESENTATION} VERSION ${WASCC_CLIENT_PRESENTATION_VERSION})

file(GLOB HEADERS ./include/${WASCC_CLIENT_PRESENTATION}/*.h)
file(GLOB SOURCES ./src/${WASCC_CLIENT_PRESENTATION}/*.cpp)

add_executable(${WASCC_CLIENT_PRESENTATION} ${SOURCES} ${HEADERS})