cmake_minimum_required(VERSION ${CMAKE_MINIMUM_REQUIRED_VERSION})

project(${WASCC_NETWORKING_IO} VERSION ${WASCC_NETWORKING_IO_VERSION})

file(GLOB HEADERS ./include/${WASCC_NETWORKING_IO}/*.h)
file(GLOB SOURCES ./src/${WASCC_NETWORKING_IO}/*.cpp)

add_library(${WASCC_NETWORKING_IO} SHARED ${SOURCES} ${HEADERS})

target_include_directories(${WASCC_NETWORKING_IO} PUBLIC ./include)

target_compile_definitions(${WASCC_NETWORKING_IO} PRIVATE ${WASCC_NETWORKING_IO}=1)