cmake_minimum_required(VERSION 3.12)

project(${WASCC_SERVER_PRESENTATION} VERSION ${WACC_SERVER_PRESENTATION_VERSION})

file(GLOB HEADERS include/${WASCC_SERVER_PRESENTATION}/*.h)
file(GLOB SOURCES src/${WASCC_SERVER_PRESENTATION}/*.cpp)

add_executable(${WASCC_SERVER_PRESENTATION} ${SOURCES} ${HEADERS})
